# assignment1_rt2

./: Readme.md
SimulationEnv/: CMakeLists.txt  package.xml
SimulationEnv/launch/: spawn_robot.launch.py  spawn_robot_ex.launch.py  world.launch.py
SimulationEnv/urdf/: mogi_bot.urdf
actions_env/: CMakeLists.txt  package.xml
actions_env/action/: Movement.action
client_server/: package.xml  setup.cfg  setup.py
client_server/client_server/: movement_client.py  movement_server.py
client_server_cpp/: CMakeLists.txt  package.xml
client_server_cpp/launch/: movement.launch.py
client_server_cpp/src/: movement_client.cpp  movement_server.cpp  movement_ui.cpp
simulation_env/: CMakeLists.txt  package.xml
simulation_env/launch/: spawn_robot.launch.py  spawn_robot_ex.launch.py  world.launch.py
simulation_env/urdf/: mogi_bot.urdf
